--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --files src/index.ts",
-    "build": "tsc && copy ./package.son ./dist",
+    "dev": "ts-node-dev --files src/index.ts index.d.ts",
+    "build": "tsc && cp ./package.json ./dist",
     "start": "node index.js"
   },
   "keywords": [],
