--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,22 @@ services:
       - 4004:4004
     depends_on:
       - mongo 
+  
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    restart: unless-stopped
+    env_file: ./frontend/.env
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    networks:
+      - internal
+    ports:
+      - 5173:5173
+    depends_on:
+      - api
 
 volumes:
   mongo_data:
